아이콘추가

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 		<!--기기 해상도 2732 x 2048-->
 		<!--스크린 사이즈 1024x1366-->
-		<link rel="icon" sizes="192x192" href="sam.jpg">
+		<link rel="icon" sizes="192x192" href="icon.png">
 
-        <link href="sam.jpg"
+        <link href="icon.png"
               sizes="144x144"
               rel="apple-touch-icon">
 
