--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 						t.push('<section id="loading" class="active">');
 						t.push('    <div class="wrap">');
-						t.push('        <img src="'+./css/images/loading.GIF?'+new Date().getTime()'+'" alt="로딩중...">');
+						t.push('        <img src="./css/images/loading.GIF?'+new Date().getTime()'+'" alt="로딩중...">');
 						t.push('    </div>');
 						t.push('</section>');
 
