--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@
 						object = characterList[number];
 
 						t.push('<section id="'+(nextPageType+(number+1))+'" class="result">');
+                        
+                        t.push('<h1 title="HR-EVOLUTION"></h1>');
 						t.push('	<div class="wrap">');
 						t.push('		<figure>');
 						t.push('			<img src="./css/images/C'+(number+1)+'.png">');
