--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		var insightWorx = (function(){
 
             var loadingImg = new Image(); 
-            loadingImg.src = './css/images/loading.GIF';
+            loadingImg.src = './css/images/loading.GIF?'+new Date.getTime();
 			var questionList;
 			var characterList;
 			var fn = {
