--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Insight worx HR style </title>
+		<title>HR Evolution · HR style</title>
 
 		<!--기기 해상도 2732 x 2048-->
 		<!--스크린 사이즈 1024x1366-->
@@ -37,7 +37,7 @@
 					<span class="name">마이다스 아이티</span> 입니다
 				</p>
 				<p class="inst">
-					<strong>Insight worx</strong> 에 참여해주셔서 감사합니다.<br>
+					<img src="css/images/logo_black.png"> 에 참여해주셔서 감사합니다.<br>
 					지금부터 간단한 유형테스트를 시작하겠습니다.
 				</p>
 				<button type="button" id="startScene2"></button>
