--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<span class="name">마이다스 아이티</span> 입니다
 				</p>
 				<p class="inst">
-					<img src="css/images/logo_black.png"> 에 참여해주셔서 감사합니다.<br>
+					<img src="css/images/logo_black.png" style="transform: translateY(1px);"> 에 참여해주셔서 감사합니다.<br>
 					지금부터 간단한 유형테스트를 시작하겠습니다.
 				</p>
 				<button type="button" id="startScene2"></button>
