--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="greeting">
 				<p class="greeting">
 					안녕하세요.<br>
-					<span class="name">마이다스 아이티</span> 입니다
+					<span class="name">마이다스아이티</span> 입니다
 				</p>
 				<p class="inst">
 					<img src="css/images/logo_black.png" style="transform: translateY(1px);"> 에 참여해주셔서 감사합니다.<br>
@@ -51,7 +51,7 @@
 			<p>
 				지금부터 간단한 설문을 통해<br>
 				평소 어떤 <strong>유형의 HR 담당자</strong>인지 알려드리겠습니다.<br>
-				밑에 있는 검사 시작 버튼을 누른 후 <strong>예시</strong>를 확인해주시기 바랍니다.<br>
+				페이지 하단의 검사 시작 버튼을 누른 후 <strong>예시</strong>를 확인해주시기 바랍니다.<br>
 			</p>
 			<img alt="아인슈타인, 체게바라, 스티브잡스, 세종대왕, 제갈량, 간디, 포청천, 에디슨, 만델라" src="./css/images/exampleCharacter.png">
 			<button type="button" id="startScene3">검사 시작</button>
@@ -77,7 +77,7 @@
 				<h2>검사 예시</h2>
 				<p class="desc">
 					큰 나무 위에 고양이가 올라가 있다.<br>
-					무서워서 내려오지 못하고 있는듯 하다.
+					무서워서 내려오지 못하고 있는 듯 하다.
 				</p>
 				<h3>다음 상황에서 어떤 행동을 하시겠습니까?</h3>
 				<ul>
