--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
 	<body>
 	
 	<section id="greeting">
-		<h1 title="HR-EVOLUTION"></h1>
-		<div class="wrap"> 
+		<div class="wrap">
 			<div class="greeting">
 				<p class="greeting">
 					안녕하세요.<br>
-					<span class="name">마이다스아이티</span> 입니다
+					<span class="name">중견기업 홍보관</span> 입니다.
 				</p>
 				<p class="inst">
-					<img src="css/images/logo_black.png" style="transform: translateY(1px);"> 에 참여해주셔서 감사합니다.<br>
+					2018 중견기업 일자리드림 페스티벌에 참여해주셔서 감사합니다.<br>
 					지금부터 간단한 유형테스트를 시작하겠습니다.
 				</p>
 				<button type="button" id="startScene2"></button>
@@ -50,7 +49,7 @@
 		<div class="wrap">
 			<p>
 				지금부터 간단한 설문을 통해<br>
-				평소 어떤 <strong>유형의 HR 담당자</strong>인지 알려드리겠습니다.<br>
+				평소 어떤 <strong>유형의 Future Professional</strong>인지 알려드리겠습니다.<br>
 				페이지 하단의 검사 시작 버튼을 누른 후 <strong>예시</strong>를 확인해주시기 바랍니다.<br>
 			</p>
 			<img alt="아인슈타인, 체게바라, 스티브잡스, 세종대왕, 제갈량, 간디, 포청천, 에디슨, 만델라" src="./css/images/exampleCharacter.png">
@@ -92,16 +91,15 @@
 	</section>
 
 	<section id="end">
-		<h1 title="HR-EVOLUTION"></h1>
-		<div class="wrap"> 
+		<div class="wrap">
 			<div class="greeting">
 				<p class="greeting">
-					<span style="font-size:36px">지금까지 행사에</span><br>
+					<span style="font-size:36px">이벤트에</span><br>
 					참여해주셔서 감사합니다!
 				</p>
 				<p class="introduce">
-					기술로 행복을 추구하는<br>
-					<strong>마이다스아이티</strong>였습니다.
+					당신의 꿈을 펼칠<br>
+					<strong>취업 성공을</strong>응원합니다.
 				</p>
 				<button type="button" id="backtoStart"></button>
 			</div>
@@ -266,7 +264,6 @@
 
 						t.push('<section id="'+(nextPageType+(number+1))+'" class="result">');
                         
-                        t.push('<h1 title="HR-EVOLUTION"></h1>');
 						t.push('	<div class="wrap">');
 						t.push('		<figure>');
 						t.push('			<img src="./css/images/C'+(number+1)+'.png">');
