5월 12일박람회 아이패드 해상도 작아서 조정

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>HR Evolution · HR style</title>
+		<title>Midas TEST</title>
 
 		<!--기기 해상도 2732 x 2048-->
 		<!--스크린 사이즈 1024x1366-->
